deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipk-calculator-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipk-calculator
  template:
    metadata:
      labels:
        app: ipk-calculator
    spec:
      containers:
      - name: web
        image: ghcr.io/Adilaputri-2003/ipk_calculator:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
